# mcp-psql

./: .env.example  README.md  pyproject.toml  server.py
